NEW241102
Fix outline: auto outline-offset being inflated on macOS
https://bugs.webkit.org/show_bug.cgi?id=241102
Summary Fix outline: auto outline-offset being inflated on macOS
Tim Nguyen (:ntim)
Reported 2022-05-30 07:49:02 PDT
Split this change out of https://github.com/WebKit/WebKit/pull/895/ Basically the focus outline should be tied to appearance: textfield/searchfield instead of being hardcoded in the html.css UA sheet.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-30 07:49:12 PDT
Tim Nguyen (:ntim)
Comment 2 2022-05-30 07:59:10 PDT
Tim Nguyen (:ntim)
Comment 3 2022-06-23 14:10:49 PDT
Note You need to log in before you can comment on or make changes to this bug.