Fix input[type=search] with appearance: textfield focus outline-offset https://bugs.webkit.org/show_bug.cgi?id=241102 <rdar://94116168>

Reviewed by Antti Koivisto.

Removed hardcoded UA sheet rules in favor of RenderTheme methods that are tied to the element's appearance.
This way, an input[type=search] with appearance: textfield will get the correct outline-offset of -2px.

* Source/WebCore/css/html.css:
(:not(input, textarea, select):focus-visible):
(:is(input:not([readonly]), textarea, select):focus-visible):
(:focus-visible): Deleted.
(html:focus, body:focus, input[readonly]:focus, applet:focus, embed:focus, iframe:focus, object:focus): Deleted.
This rule has been made obsolete since the global :focus rule was changed to :focus-visible

(#if !defined(WTF_PLATFORM_IOS_FAMILY) || !WTF_PLATFORM_IOS_FAMILY): Deleted.
* Source/WebCore/rendering/RenderTheme.cpp:
(WebCore::RenderTheme::adjustStyle):
(WebCore::RenderTheme::adjustListboxStyle const):
(WebCore::RenderTheme::adjustTextFieldStyle const):
(WebCore::RenderTheme::adjustTextAreaStyle const):
* Source/WebCore/rendering/RenderTheme.h:
* Source/WebCore/rendering/RenderThemeIOS.h: